--- a/src/pages/MultiStepFormContainer/MultiStepFormContainer.module.css
+++ b/src/pages/MultiStepFormContainer/MultiStepFormContainer.module.css
@@ -7,7 +7,7 @@
 }
 .form-container{
     width: 40vw;
-    height: 200px;
+    /* height: 200px; */
     background: var(--alabaster);
     max-width: 500px;
     min-width: 200px;
